--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,7 @@ transition: all 0.45s ease;
 #work .lrs-projects .lrs-project .lrs-project-content {
 opacity: 0;
 width: 100%;
-height: 100%;
+height: 100px;
 background: rgba(0, 0, 0, 0.72);
 position: absolute;
 top: 0;
